Upgrade vaadin and other dependencies, Integrate Vaadin Session Replication Debug Tool.